examples/test/testpolicy11664.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11664
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key17: value3
      key41: value11
      key29: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value14
      podSelector:
        matchLabels:
          key3: value40
